# hypervolt-agile

./: .gitattributes  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent-docs/issues/: chore-downgrade-websocket-reconnect-log.md
.agent-docs/specs/: chore-downgrade-websocket-reconnect-log.md
.github/: dependabot.yml
.github/workflows/: auto_request_review.yml  ci-arm64.yml  ci-checks.yml  dependabot-requirements.yml
app/: config.py  main.py  schedule.py  schedule_builder.py
app/common/: constants.py  decorator.py  exceptions.py  logging.py  model.py  polling.py  utils.py
app/hypervolt/: charger.py  coordinator.py  model.py  state.py
app/hypervolt/client/: protocol.py  rest.py  websocket.py
app/octopus/: client.py  postcode.py
app/schedule/: __init__.py  builder.py  coordinator.py
config/: config.yml.template
