[tool.poetry]
name = "hypervolt-agile"
version = "0.1.0"
description = ""
authors = ["Matt Holubinka <meholubinka@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.2.2"
requests = "^2.32.5"
tzdata = "^2025.2"
aiohttp = "^3.12.15"
websockets = "^16.0"
pyyaml = "^6.0.3"
pydantic = "^2.12.5"


[tool.poetry.group.dev.dependencies]
isort = "^8.0.1"
black = "^26.3.1"
mypy = "^1.8.0"
ruff = "^0.15.8"
pre-commit = "^4.3.0"
types-pyyaml = "^6.0.12.20250915"
types-requests = "^2.33.0.20260327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
exclude=["tests", ".reference"]
disallow_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = false
check_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = [".deprecated"]
